<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotis_controller_msgs</name>
  <version>0.1.4</version>
  <description>
    This package includes ROS2 messages and services for robotis_framework packages
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache License 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <url type="website">http://wiki.ros.org/robotis_controller_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/robotis_framework_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework-msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework-msgs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
