<?xml version="1.0"?>
<package format="3">
  <name>robotis_framework</name>
  <version>0.2.9</version>
  <description>
    ROS packages for the robotis_framework (meta package)
  </description>
  <license>Apache 2.0</license>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <url type="website">http://wiki.ros.org/robotis_framework</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/robotis_framework_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robotis_controller</depend>
  <depend>robotis_device</depend>
  <depend>robotis_framework_common</depend>
</package>

