<?xml version="1.0"?>
<package format="3">
  <name>robotis_math</name>
  <version>0.2.6</version>
  <description>
    This package is a set of basic math functions for ROBOTIS's robots.
    We provide some linear algebra and trajectory generation functions and classes.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/robotis_math</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Math</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Math/issues</url>
  <build_depend>ament_cmake</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
