################################################################################
# Set minimum required version of CMake, project name, and compile options
################################################################################
cmake_minimum_required(VERSION 3.5)
project(op3_action_module_msgs)

################################################################################
# Find ament packages and libraries for ament and system dependencies
################################################################################
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

################################################################################
# Declare ROS messages, services, and actions
################################################################################
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/StartAction.msg"
  "srv/IsRunning.srv"
  DEPENDENCIES std_msgs
)

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Declare ament specific configuration to be passed to dependent projects
################################################################################
ament_export_dependencies(rosidl_default_runtime)

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################

################################################################################
# Test
################################################################################

ament_package()
