<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotis_op3_msgs</name>
  <version>0.1.0</version>
  <description>ROS2 messages for the ROBOTIS OP3 robot</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>op3_action_module_msgs</exec_depend>
  <exec_depend>op3_offset_tuner_msgs</exec_depend>
  <exec_depend>op3_online_walking_module_msgs</exec_depend>
  <exec_depend>op3_walking_module_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
